--- a/bdaproto/Cargo.toml
+++ b/bdaproto/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 tonic = "0.6"
 prost = "0.9"
+prost-types = "0.9"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
