--- a/bdaproto/Cargo.toml
+++ b/bdaproto/Cargo.toml
@@ -3,11 +3,21 @@ name = "bdaproto"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+doctest = false
+
 [dependencies]
 tonic = "0.6"
 prost = "0.9"
 prost-types = "0.9"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+pbjson = "0.2"
+pbjson-types = "0.2"
+serde = "1.0"
+serde_json = "1.0"
+serde_yaml = "0.8"
 
 [build-dependencies]
 tonic-build = "0.6"
+prost-build = "0.2"
+pbjson-build = "0.2"
