--- a/bdadatastore/Cargo.toml
+++ b/bdadatastore/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 bdaproto = { path = "../bdaproto" }
 bdacore = { path = "../bdacore" }
-bdaql = { path = "../bdaql" }
+bdaindex = { path = "../bdaindex" }
 tonic = "0.6"
 prost = "0.9"
 prost-types = "0.9"
