Update readme file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "bdaproto",
     "bdacore",
     "bdaindex",
+    "bdakvstore",
     "bdadatastore",
     "bdaengine",
     "bdacli",
