--- a/bdacore/Cargo.toml
+++ b/bdacore/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 bdaproto = { path = "../bdaproto" }
+bdaql = { path = "../bdaql" }
 prost-types = "0.9"
 serde_json = "1.0"
 serde_yaml = "0.8"
+ppom = "0.7"
 
 [dev-dependencies]
 mockall = "0.11"
