--- a/bdacore/Cargo.toml
+++ b/bdacore/Cargo.toml
@@ -10,3 +10,6 @@ bdaproto = { path = "../bdaproto" }
 prost-types = "0.9"
 serde_json = "1.0"
 serde_yaml = "0.8"
+
+[dev-dependencies]
+mockall = "0.11"
