--- a/bdaindex/Cargo.toml
+++ b/bdaindex/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ppom = "0.7"
-
+lmdb = "0.8"
+lmdb-sys = "0.8"
+bincode = "1.3"
+tempdir = "0.3"
+libc = "0.2"
 
 
 [dev-dependencies]
