--- a/bdadatastore/Cargo.toml
+++ b/bdadatastore/Cargo.toml
@@ -20,3 +20,4 @@ serde_json = "1.0"
 serde_yaml = "0.8"
 futures-core = "0.3"
 tokio-stream = "0.1"
+clap = { version = "3.0", features = ["derive"] }
