--- a/bdacore/Cargo.toml
+++ b/bdacore/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bdaproto = { path = "../bdaproto" }
 bdaql = { path = "../bdaql" }
 prost-types = "0.9"
+serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
 ppom = "0.7"
