--- a/bdacli/Cargo.toml
+++ b/bdacli/Cargo.toml
@@ -18,6 +18,7 @@ pbjson-types = "0.2"
 serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
+yaml-rust = "0.4"
 futures-core = "0.3"
 tokio-stream = "0.1"
 clap = { version = "3.0", features = ["derive"] }
