--- a/bdaindex/Cargo.toml
+++ b/bdaindex/Cargo.toml
@@ -9,3 +9,9 @@ edition = "2021"
 bdaql = { path = "../bdaql" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+ppom = "0.7"
+
+
+
+[dev-dependencies]
+mockall = "0.11"
