--- a/bdadatastore/Cargo.toml
+++ b/bdadatastore/Cargo.toml
@@ -6,3 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bdaproto = { path = "../bdaproto" }
+bdacore = { path = "../bdacore" }
+bdaql = { path = "../bdaql" }
+tonic = "0.6"
+prost = "0.9"
+prost-types = "0.9"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+pbjson = "0.2"
+pbjson-types = "0.2"
+serde = "1.0"
+serde_json = "1.0"
+serde_yaml = "0.8"
+futures-core = "0.3"
+tokio-stream = "0.1"
