Add rust cache capability

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -17,6 +17,8 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: 'true'
+    - name: Configure rust cache
+        uses: Swatinem/rust-cache@v1        
     - name: Build
       run: cargo build --verbose
     - name: Run tests
