--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -19,7 +19,7 @@ jobs:
         submodules: 'true'
     - name: Configure rust cache
       uses: Swatinem/rust-cache@v1        
-    - name: Build
-      run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
+    - name: Build
+      run: cargo build --release
