Adds commit-workflow variable
This would activate the composite-action bbw-rust

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,6 @@ on:
 jobs:
   commit:
     uses: gracig/workflows/.github/workflows/main.yaml@main
-    with: 
+    with:
+      commit-workflow: "bbw-rust"
       rust-working-directory: "."
