Fixing uses variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,9 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch: {}
-
 jobs:
   commit:
-    uses: gracig/workflows/.github/workflows/main.yaml@main
+    uses: "gracig/workflows/.github/workflows/main.yaml@main"
     with:
       commit-workflow: "bbw-rust"
       rust-working-directory: "."
