--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,4 +1,4 @@
-name: Main
+name: Commit
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch: {}
 jobs:
   commit:
-    uses: gracig/workflows/.github/workflows/workflow-main.yaml@main
+    uses: gracig/workflows/.github/workflows/main.yaml@main
     with:
       commit-workflow: "bbw-rust"
       rust-working-directory: "."
